<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorAccent"
    tools:context=".MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/frame1">
            
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_35sdp"
                    android:src="@drawable/ic_settings2"
                    android:layout_weight="2"
                    android:layout_gravity="center"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_50sdp"
                    android:text="@string/textJudul"
                    android:layout_weight="1"
                    android:textSize="@dimen/_20sdp"
                    android:gravity="center"
                    android:textColor="@android:color/white"/>

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_35sdp"
                    android:src="@drawable/ic_notifications_none_black_24dp"
                    android:layout_weight="2"
                    android:layout_gravity="center"/>
            </LinearLayout>
        </FrameLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/frame2">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/username"
                    android:textSize="@dimen/_20sdp"
                    android:textColor="@android:color/white"
                    android:gravity="center"
                    android:id="@+id/tv_name"
                    android:layout_marginTop="@dimen/_50sdp"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/useremail"
                    android:textSize="@dimen/_16sdp"
                    android:id="@+id/tv_email"
                    android:textColor="@android:color/white"
                    android:gravity="center" />

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:src="@drawable/book"/>
            </LinearLayout>
        </FrameLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:background="@drawable/round_image"
            android:layout_below="@id/frame2"
            android:layout_marginTop="0dp">
       <FrameLayout
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:id="@+id/fm_main"/>
        </LinearLayout>

    </RelativeLayout>
    <ImageView
        android:layout_width="@dimen/_50sdp"
        android:layout_height="@dimen/_50sdp"
        android:src="@drawable/ic_play_arrow_black_24dp"
        android:background="@drawable/oval"
        android:id="@+id/iv_play"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="@dimen/_30sdp"
        android:layout_marginTop="@dimen/_150sdp"/>

    <ImageView
        android:layout_width="@dimen/_50sdp"
        android:layout_height="@dimen/_50sdp"
        android:src="@drawable/ic_mode_edit_black_24dp"
        android:background="@drawable/oval"
        android:id="@+id/iv_modeEdit"
        android:layout_alignParentRight="true"
        android:layout_marginRight="@dimen/_30sdp"
        android:layout_marginTop="@dimen/_150sdp"/>

</RelativeLayout>










